# termtalk

./: .gitignore  Cargo.toml  README.md  run_client.sh  run_server.sh
src/: client.rs  lib.rs  logging.rs  server.rs  utils.rs
